@@ -1,5 +1,10 @@
 RocketShip Changelog
 
+03-29-2015
+
+    - Moved partials to global view directory
+    - View class was adjusted for the new partials directory
+
 03-12-2015
 
     - Removed Validation class, replaced by Respect\Validation instead (way more powerful)
